# ReqAHE

ReqAHE/: .env.example  .gitignore  README.md  pyproject.toml  splits.json  splits_converted_scenarios_1.json
ReqAHE/ReqElicitGym/: config.py
ReqAHE/configs/: default.yaml
ReqAHE/harness_seed/: code_agent.yaml  system_prompt.md
ReqAHE/notes/: ahe_to_re_mapping.md  experiment_protocol.md  how_to_run.md  source_inspection.json  source_inspection.md
ReqAHE/runs/: latest.txt
ReqAHE/scripts/: evaluate_iterations_on_testset.py  evolve_full.ps1  evolve_sample.ps1  final_eval.ps1  inspect.ps1  normalize_run_paths.py  report.ps1  smoke.ps1  use_direct_network.ps1
ReqAHE/tests/: test_dataset_loader.py  test_diagnoser_declared_components.py  test_diagnoser_refiner_schema.py  test_diagnoser_trace_path_resolution.py  test_direct_network.py  test_evaluate_iterations_on_testset.py  test_evolution_batching.py  test_evolution_stability_updates.py  test_harness_core_components.py  test_legacy_modules_removed.py  test_llm_client.py  test_llm_client_refiner_attempts.py  test_memory_router.py  test_no_duplicate_schema_functions.py  test_refiner_normalization.py  test_refiner_path_schema_normalization.py  test_refiner_resilience.py  test_refiner_router_target_normalization.py  test_refiner_self_reflection_registry.py  test_reflection_and_trace.py  test_reflection_registry_not_llm_facing.py  test_relative_path_persistence.py  test_reporting_cli_attribution.py  test_reqelicit_evaluator.py  test_route_stats_skill_schema.py  test_skill_router.py  test_skill_similarity.py  (+1 more)
(+552 files in other folders)
