[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reqahe"
version = "0.1.0"
description = "RE-AHE: Agentic Harness Engineering for Requirements Elicitation Interview Agents"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
